# ITMO_education

./: .gitignore  README.md
C++/Eigenvalues/: eigenvalues.c
C++/eigenvalues/: CMakeLists.txt
C++/itmo_c_png-Vitaliy-G-0-main/: CMakeLists.txt  main.c
C++/itmo_c_png-Vitaliy-G-0-main/test_data/: ref0.pnm
C++/itmo_cpp_ln-Vitaliy-G-0-main/: CMakeLists.txt  LN.cpp  LN.h  custom_exceptions.h  main.cpp  reserve.cpp  vectorLN.cpp  vectorLN.h
C++/itmo_cpp_qt-Vitaliy-G-0/: ButtonStylesheet.h  CHECK_LIST.md  clang-format  gradientpicker.cpp  gradientpicker.h  itmo_cpp_qt-Vitaliy-G-0.pro  main.cpp  mainwindow.cpp  mainwindow.h  plot.cpp  plot.h
Web/Lab1/: Main.java  Task1.rtf  Task2.rtf
Web/Lab5/: Веб-программирование_ практика-5 (2023).docx
computer-architecture/: calculator.v  grasshopper.cpp  ternary.v  ternary_logic.v
computer-architecture/MIPS/: a.out  cpu_test.v  dump.vcd  mips_cpu.v  util.v
java-advanced/: README.md
java-advanced/scripts/: MANIFEST.MF  buildJar-HW5.bash  buildJavadoc-HW6.bash
operating-systems/lab1/: modification  task1_max  task2_reader  task3_menu  task4_path  task5_log  task6_fullLog  task7_emails  task8_UID  task9_NumOfLogs
operating-systems/lab2/: mod  task1_countPID  task2_sbin  task3_last  task4_burst
operating-systems/Отчёт Лаб5 OS/: main.tex
operating-systems/Отчет Лаб6 OS/: main.tex
paradigms/clojure-solutions/: expression.clj  linear.clj
paradigms/java-solutions/: Script_ON
paradigms/javascript-solutions/: functionalExpression.js  objectExpression.js  test.html
paradigms/prolog-solutions/: primes.pl
(+313 files in other folders)
